# brewblox-froghop-kettles

./: .env  .gitignore  README.md  azure-pipelines.yml  pyproject.toml  tox.ini
.github/workflows/: docker-publish.yml
brewblox_froghop_kettles/: __main__.py  publish_example.py  publish_temperature.py  service_status.py
brewblox_ispindel/: __main__.py  ispindel_service.py
docker/: Dockerfile
test/: conftest.py  test_http_example.py  test_ispindel.py  test_main.py  test_publish_example.py  test_subscribe_example.py
